Functioneel test bijlage + competitie inlog aangepast

--- a/myApp/www/templates/competitieinlog.html
+++ b/myApp/www/templates/competitieinlog.html
@@ -12,7 +12,7 @@
     Primera División
   </a>
 
-  <a ng-show="authdata.competities.seria" class="item item-icon-left" href="#/app/italyoptions">
+  <a ng-show="authdata.competities.seriea" class="item item-icon-left" href="#/app/italyoptions">
     <i class="icon"><img class="icon-competition" ng-src="img/seriea.png"></i>
     Serie A
   </a>
