--- a/myApp/www/templates/menu.html
+++ b/myApp/www/templates/menu.html
@@ -54,11 +54,10 @@
         </ion-item>
       </ion-list>
       <div class="socialmedia">
-
-      	<img class="socialmediaicons" src="img/facebook.jpg" alt="">
-      	<img class="socialmediaicons" src="img/twitter.jpg" alt="">
-      	<img class="socialmediaicons" src="img/instagram.jpg" alt="">
-		  <img class="socialmediaicons" src="img/linked.jpg" alt="">
+      	<a onclick="window.open('https://www.facebook.com/sensatiereizen')"><img class="socialmediaicons" src="img/facebook.jpg" alt=""></a>
+      	<a onclick="window.open('https://twitter.com/voetbalsensatie')"><img class="socialmediaicons" src="img/twitter.jpg" alt="">
+      	<a onclick="window.open('http://www.instagram.com')"><img class="socialmediaicons" src="img/instagram.jpg" alt="">
+		    <a onclick="window.open('https://www.linkedin.com/company/voetbalsensatie')"><img class="socialmediaicons" src="img/linked.jpg" alt="">
       </div>
     </ion-content>
   </ion-side-menu>
