--- a/myApp/www/templates/championsoptions.html
+++ b/myApp/www/templates/championsoptions.html
@@ -2,6 +2,11 @@
   <ion-content>
     <div class="list">
 <div ng-show='loader'><img ng-src="img/loading.gif" class="loader"></div>
+<a class="item item-icon-left" href="#/app/champions">
+       <i class="icon"><img class="icon-competition" ng-src="img/champions.png"></i>
+
+   Ranglijst
+  </a>
   <a class="item item-icon-left item-icon-left" href="#/app/teamtimedchampions">
     <i class="icon"><img class="icon-competition" ng-src="img/champions.png"></i>
 
