--- a/myApp/www/templates/voorkeur.html
+++ b/myApp/www/templates/voorkeur.html
@@ -13,7 +13,7 @@
 				<img id="voorkeurimg" class="icon-competition" ng-src="img/ligabvva.png"> &nbsp;&nbsp; Primera Division
 		  </ion-toggle>
 						
-		  <ion-toggle ng-model="authdata.competities.seria" ng-change="authdata.$save()" toggle-class="toggle-calm">
+		  <ion-toggle ng-model="authdata.competities.seriea" ng-change="authdata.$save()" toggle-class="toggle-calm">
 				<img id="voorkeurimg" class="icon-competition" ng-src="img/seriea.png"> &nbsp;&nbsp; Serie A
 		  </ion-toggle>
 					
