--- a/myApp/www/templates/euoptions.html
+++ b/myApp/www/templates/euoptions.html
@@ -3,31 +3,27 @@
     <div class="list">
 <div ng-show='loader'><img ng-src="img/loading.gif" class="loader"></div>
 <a class="item item-icon-left" href="#/app/eu">
-       <i class="icon"><img class="icon-competition" ng-src="img/eredivisie.png"></i>
+       <i class="icon"><img class="icon-competition" ng-src="img/EU2016.png"></i>
 
    Ranglijst
   </a>
   <a class="item item-icon-left item-icon-left" href="#/app/teamtimedeu">
-    <i class="icon"><img class="icon-competition" ng-src="img/eredivisie.png"></i>
+    <i class="icon"><img class="icon-competition" ng-src="img/EU2016.png"></i>
 
 Competitie Programma
   </a>
-  <a class="item item-icon-left item-icon-left" href="#/app/teamfinishedeu">
-    <i class="icon"><img class="icon-competition" ng-src="img/eredivisie.png"></i>
+ <!-- <a class="item item-icon-left item-icon-left" href="#/app/teamfinishedeu">
+    <i class="icon"><img class="icon-competition" ng-src="img/EU2016.png"></i>
 
 Gespeelde Wedstrijden
-  </a>
+  </a>-->
   <a class="item item-icon-left item-icon-left" href="#/app/teaminplayeu">
-    <i class="icon"><img class="icon-competition" ng-src="img/eredivisie.png"></i>
+    <i class="icon"><img class="icon-competition" ng-src="img/EU2016.png"></i>
 
 Live Score
   </a>
 
-  <a class="item item-icon-left item-icon-left" href="#/app/teaminfoeu">
-    <i class="icon"><img class="icon-competition" ng-src="img/eredivisie.png"></i>
 
-Marktwaarde clubs
-  </a>
 
 
 </div>
