--- a/myApp/www/templates/leaguetables.html
+++ b/myApp/www/templates/leaguetables.html
@@ -1,10 +1,10 @@
-<ion-view side-menu-content drag-content="false">
+<ion-view>
       <ion-nav-title>
-		  {{league}}
+		  <p class="league-title">{{league}}</p>
     </ion-nav-title>
   <ion-content>
     <ion-list class="ranglijst" >
-  <table><tr>
+  <table class="iphone5_testing"><tr>
   <td class="leegveld" ></td>
    <td class="grotevanvakjes">A</td>
    <td class="grotevanvakjes">P</td>
