--- a/myApp/www/templates/ourteams.html
+++ b/myApp/www/templates/ourteams.html
@@ -1,4 +1,5 @@
 <ion-view  hide-back-button="true" title='Onze Teams'>
+<ion-scroll zooming="true" direction="xy" style="width: 100%; height: 100%">
 <ion-content id="pitch" ng-controller="HomeCtrl" scroll="false">
 
   <!-- <div class="homecontainer">
@@ -42,6 +43,7 @@
     <img ng-click="valenciaAlert()"class="player eleven"src="img/Valencia-icon.png"/>
   </div>
 </ion-content>
+ </ion-scroll>
 <ion-footer-bar align-title="left" class="bar-assertive">
   <h1 class="title" style="text-align: center;" >Teams die voetbalsensatie aanbieden</h1>
 </ion-footer-bar>
