--- a/myApp/www/templates/signup.html
+++ b/myApp/www/templates/signup.html
@@ -5,11 +5,12 @@
 	    <div class="containerpages">
 	   
 	   <label class="item item-input">
-        <input type="email" ng-model="newUser.email" placeholder="Email:">
+        <input type="email" ng-model="newUser.email" maxlength="35" placeholder="Email:">
       </label>
 	
 	  <label class="item item-input">
-        <input type="password" ng-model="newUser.password" placeholder="Wachtwoord:">
+        <input type="password" ng-model="newUser.password" minlength="5" maxlength="30" placeholder="Wachtwoord:">
+        
       </label>
 	  <button ng-click="signup()" class="button button-block button-positive">
 Aanmelden</button>
